Package_Tools/include-C/Ubuntu_26.04/gtk-4.0/gtk/print/gtkprintsettings.h

typedef struct _GtkPrintSettings GtkPrintSettings;
#define GTK_TYPE_PRINT_SETTINGS    (gtk_print_settings_get_type ())
#define GTK_PRINT_SETTINGS(obj)    (G_TYPE_CHECK_INSTANCE_CAST ((obj), GTK_TYPE_PRINT_SETTINGS, GtkPrintSettings))
#define GTK_IS_PRINT_SETTINGS(obj) (G_TYPE_CHECK_INSTANCE_TYPE ((obj), GTK_TYPE_PRINT_SETTINGS))
typedef struct _GtkPageRange GtkPageRange;
extern
GType             gtk_print_settings_get_type                (void) ;
/* Helpers: */

extern
const char *         gtk_print_settings_get_printer           (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_printer           (GtkPrintSettings   *settings,
								const char         *printer);
extern
GtkPageOrientation    gtk_print_settings_get_orientation       (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_orientation       (GtkPrintSettings   *settings,
								GtkPageOrientation  orientation);
extern
GtkPaperSize *        gtk_print_settings_get_paper_size        (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_paper_size        (GtkPrintSettings   *settings,
								GtkPaperSize       *paper_size);
extern
double                gtk_print_settings_get_paper_width       (GtkPrintSettings   *settings,
								GtkUnit             unit);
extern
void                  gtk_print_settings_set_paper_width       (GtkPrintSettings   *settings,
								double              width,
								GtkUnit             unit);
extern
double                gtk_print_settings_get_paper_height      (GtkPrintSettings   *settings,
								GtkUnit             unit);
extern
void                  gtk_print_settings_set_paper_height      (GtkPrintSettings   *settings,
								double              height,
								GtkUnit             unit);
extern
gboolean              gtk_print_settings_get_use_color         (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_use_color         (GtkPrintSettings   *settings,
								gboolean            use_color);
extern
gboolean              gtk_print_settings_get_collate           (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_collate           (GtkPrintSettings   *settings,
								gboolean            collate);
extern
gboolean              gtk_print_settings_get_reverse           (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_reverse           (GtkPrintSettings   *settings,
								gboolean            reverse);
extern
GtkPrintDuplex        gtk_print_settings_get_duplex            (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_duplex            (GtkPrintSettings   *settings,
								GtkPrintDuplex      duplex);
extern
GtkPrintQuality       gtk_print_settings_get_quality           (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_quality           (GtkPrintSettings   *settings,
								GtkPrintQuality     quality);
extern
int                   gtk_print_settings_get_n_copies          (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_n_copies          (GtkPrintSettings   *settings,
								int                 num_copies);
extern
int                   gtk_print_settings_get_number_up         (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_number_up         (GtkPrintSettings   *settings,
								int                 number_up);
extern
GtkNumberUpLayout     gtk_print_settings_get_number_up_layout  (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_number_up_layout  (GtkPrintSettings   *settings,
								GtkNumberUpLayout   number_up_layout);
extern
int                   gtk_print_settings_get_resolution        (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_resolution        (GtkPrintSettings   *settings,
								int                 resolution);
extern
int                   gtk_print_settings_get_resolution_x      (GtkPrintSettings   *settings);
extern
int                   gtk_print_settings_get_resolution_y      (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_resolution_xy     (GtkPrintSettings   *settings,
								int                 resolution_x,
								int                 resolution_y);
extern
double                gtk_print_settings_get_printer_lpi       (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_printer_lpi       (GtkPrintSettings   *settings,
								double              lpi);
extern
double                gtk_print_settings_get_scale             (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_scale             (GtkPrintSettings   *settings,
								double              scale);
extern
GtkPrintPages         gtk_print_settings_get_print_pages       (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_print_pages       (GtkPrintSettings   *settings,
								GtkPrintPages       pages);
extern
GtkPageRange *        gtk_print_settings_get_page_ranges       (GtkPrintSettings   *settings,
								int                *num_ranges);
extern
void                  gtk_print_settings_set_page_ranges       (GtkPrintSettings   *settings,
								GtkPageRange       *page_ranges,
								int                 num_ranges);
extern
GtkPageSet            gtk_print_settings_get_page_set          (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_page_set          (GtkPrintSettings   *settings,
								GtkPageSet          page_set);
extern
const char *         gtk_print_settings_get_default_source    (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_default_source    (GtkPrintSettings   *settings,
								const char         *default_source);
extern
const char *         gtk_print_settings_get_media_type        (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_media_type        (GtkPrintSettings   *settings,
								const char         *media_type);
extern
const char *         gtk_print_settings_get_dither            (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_dither            (GtkPrintSettings   *settings,
								const char         *dither);
extern
const char *         gtk_print_settings_get_finishings        (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_finishings        (GtkPrintSettings   *settings,
								const char         *finishings);
extern
const char *         gtk_print_settings_get_output_bin        (GtkPrintSettings   *settings);
extern
void                  gtk_print_settings_set_output_bin        (GtkPrintSettings   *settings,
								const char         *output_bin);
extern
GVariant             *gtk_print_settings_to_gvariant           (GtkPrintSettings   *settings);
extern
GtkPrintSettings     *gtk_print_settings_new_from_gvariant     (GVariant           *variant);