Package_Tools/include-C/Ubuntu_26.04/gtk-4.0/gtk/print/h/gtkprintsettings.pp


function gtk_print_settings_get_printer(settings:PGtkPrintSettings):Pchar;cdecl;external;
(* Const before type ignored *)
procedure gtk_print_settings_set_printer(settings:PGtkPrintSettings; printer:Pchar);cdecl;external;
function gtk_print_settings_get_orientation(settings:PGtkPrintSettings):TGtkPageOrientation;cdecl;external;
procedure gtk_print_settings_set_orientation(settings:PGtkPrintSettings; orientation:TGtkPageOrientation);cdecl;external;
function gtk_print_settings_get_paper_size(settings:PGtkPrintSettings):PGtkPaperSize;cdecl;external;
procedure gtk_print_settings_set_paper_size(settings:PGtkPrintSettings; paper_size:PGtkPaperSize);cdecl;external;
function gtk_print_settings_get_paper_width(settings:PGtkPrintSettings; unit:TGtkUnit):Tdouble;cdecl;external;
procedure gtk_print_settings_set_paper_width(settings:PGtkPrintSettings; width:Tdouble; unit:TGtkUnit);cdecl;external;
function gtk_print_settings_get_paper_height(settings:PGtkPrintSettings; unit:TGtkUnit):Tdouble;cdecl;external;
procedure gtk_print_settings_set_paper_height(settings:PGtkPrintSettings; height:Tdouble; unit:TGtkUnit);cdecl;external;
function gtk_print_settings_get_use_color(settings:PGtkPrintSettings):Tgboolean;cdecl;external;
procedure gtk_print_settings_set_use_color(settings:PGtkPrintSettings; use_color:Tgboolean);cdecl;external;
function gtk_print_settings_get_collate(settings:PGtkPrintSettings):Tgboolean;cdecl;external;
procedure gtk_print_settings_set_collate(settings:PGtkPrintSettings; collate:Tgboolean);cdecl;external;
function gtk_print_settings_get_reverse(settings:PGtkPrintSettings):Tgboolean;cdecl;external;
procedure gtk_print_settings_set_reverse(settings:PGtkPrintSettings; reverse:Tgboolean);cdecl;external;
function gtk_print_settings_get_duplex(settings:PGtkPrintSettings):TGtkPrintDuplex;cdecl;external;
procedure gtk_print_settings_set_duplex(settings:PGtkPrintSettings; duplex:TGtkPrintDuplex);cdecl;external;
function gtk_print_settings_get_quality(settings:PGtkPrintSettings):TGtkPrintQuality;cdecl;external;
procedure gtk_print_settings_set_quality(settings:PGtkPrintSettings; quality:TGtkPrintQuality);cdecl;external;
function gtk_print_settings_get_n_copies(settings:PGtkPrintSettings):longint;cdecl;external;
procedure gtk_print_settings_set_n_copies(settings:PGtkPrintSettings; num_copies:longint);cdecl;external;
function gtk_print_settings_get_number_up(settings:PGtkPrintSettings):longint;cdecl;external;
procedure gtk_print_settings_set_number_up(settings:PGtkPrintSettings; number_up:longint);cdecl;external;
function gtk_print_settings_get_number_up_layout(settings:PGtkPrintSettings):TGtkNumberUpLayout;cdecl;external;
procedure gtk_print_settings_set_number_up_layout(settings:PGtkPrintSettings; number_up_layout:TGtkNumberUpLayout);cdecl;external;
function gtk_print_settings_get_resolution(settings:PGtkPrintSettings):longint;cdecl;external;
procedure gtk_print_settings_set_resolution(settings:PGtkPrintSettings; resolution:longint);cdecl;external;
function gtk_print_settings_get_resolution_x(settings:PGtkPrintSettings):longint;cdecl;external;
function gtk_print_settings_get_resolution_y(settings:PGtkPrintSettings):longint;cdecl;external;
procedure gtk_print_settings_set_resolution_xy(settings:PGtkPrintSettings; resolution_x:longint; resolution_y:longint);cdecl;external;
function gtk_print_settings_get_printer_lpi(settings:PGtkPrintSettings):Tdouble;cdecl;external;
procedure gtk_print_settings_set_printer_lpi(settings:PGtkPrintSettings; lpi:Tdouble);cdecl;external;
function gtk_print_settings_get_scale(settings:PGtkPrintSettings):Tdouble;cdecl;external;
procedure gtk_print_settings_set_scale(settings:PGtkPrintSettings; scale:Tdouble);cdecl;external;
function gtk_print_settings_get_print_pages(settings:PGtkPrintSettings):TGtkPrintPages;cdecl;external;
procedure gtk_print_settings_set_print_pages(settings:PGtkPrintSettings; pages:TGtkPrintPages);cdecl;external;
function gtk_print_settings_get_page_ranges(settings:PGtkPrintSettings; num_ranges:Plongint):PGtkPageRange;cdecl;external;
procedure gtk_print_settings_set_page_ranges(settings:PGtkPrintSettings; page_ranges:PGtkPageRange; num_ranges:longint);cdecl;external;
function gtk_print_settings_get_page_set(settings:PGtkPrintSettings):TGtkPageSet;cdecl;external;
procedure gtk_print_settings_set_page_set(settings:PGtkPrintSettings; page_set:TGtkPageSet);cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_get_default_source(settings:PGtkPrintSettings):Pchar;cdecl;external;
(* Const before type ignored *)
procedure gtk_print_settings_set_default_source(settings:PGtkPrintSettings; default_source:Pchar);cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_get_media_type(settings:PGtkPrintSettings):Pchar;cdecl;external;
(* Const before type ignored *)
procedure gtk_print_settings_set_media_type(settings:PGtkPrintSettings; media_type:Pchar);cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_get_dither(settings:PGtkPrintSettings):Pchar;cdecl;external;
(* Const before type ignored *)
procedure gtk_print_settings_set_dither(settings:PGtkPrintSettings; dither:Pchar);cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_get_finishings(settings:PGtkPrintSettings):Pchar;cdecl;external;
(* Const before type ignored *)
procedure gtk_print_settings_set_finishings(settings:PGtkPrintSettings; finishings:Pchar);cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_get_output_bin(settings:PGtkPrintSettings):Pchar;cdecl;external;
(* Const before type ignored *)
procedure gtk_print_settings_set_output_bin(settings:PGtkPrintSettings; output_bin:Pchar);cdecl;external;
function gtk_print_settings_to_gvariant(settings:PGtkPrintSettings):PGVariant;cdecl;external;
function gtk_print_settings_new_from_gvariant(variant:PGVariant):PGtkPrintSettings;cdecl;external;
{////G_DEFINE_AUTOPTR_CLEANUP_FUNC   (GtkPrintSettings, g_object_unref) }

implementation

{ was #define dname def_expr }
function GTK_TYPE_PRINT_SETTINGS : longint; { return type might be wrong }
  begin
    GTK_TYPE_PRINT_SETTINGS:=gtk_print_settings_get_type;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GTK_PRINT_SETTINGS(obj : longint) : longint;
begin
  GTK_PRINT_SETTINGS:=G_TYPE_CHECK_INSTANCE_CAST(obj,GTK_TYPE_PRINT_SETTINGS,GtkPrintSettings);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GTK_IS_PRINT_SETTINGS(obj : longint) : longint;
begin
  GTK_IS_PRINT_SETTINGS:=G_TYPE_CHECK_INSTANCE_TYPE(obj,GTK_TYPE_PRINT_SETTINGS);
end;


end.
